fix(navbar search): searchbar on small viewports now centers, eases into the screen, and makes the background darker.

--- a/client/src/components/desktop/navbar/NavBar.scss
+++ b/client/src/components/desktop/navbar/NavBar.scss
@@ -51,33 +51,48 @@
             width: 400px;
         }
     }
-
-    @media screen and (max-width: 1100px) {
-        margin-left: auto;
-        margin-right: 1rem;
-    }
 }
+
 
 @media screen and (max-width: 991px) {
     .d-searchbar {
+        margin-left: auto;
+        margin-right: 1rem;
+        width: 54px;
+
         .search-icon {
             display: block;
         }
 
         input[type="text"] {
             display: none;
+            width: 0;
         }
+
+        .d-search-btn {
+            display: none;
+        }
+
     }
 
     .search-visible {
+        width: 500px;
+        border: 2px solid #8e47ff;
+        border-radius: 5px;
+        position: absolute;
+        top: 80px;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: width 2s ease, border-radius 2s ease;
+        box-shadow: 0 0 0 100vmax rgba(18, 18, 18, 0.28);
+
+
         input[type="text"] {
-            width: 400px;
-            border: 5px solid #8e47ff;
-            padding: 20px;
-            border-radius: 5px;
-            position: absolute;
-            top: 44px;
-            right: 0;
+            display: block;
+            width: 100%;
+        }
+
+        .d-search-btn {
             display: block;
         }
     }
